Fix wrapping secnos

--- a/src/base.css
+++ b/src/base.css
@@ -938,6 +938,7 @@
 		float: left;
 		width: 4em;
 		margin-left: -4em;
+		white-space: nowrap;
 	}
 
 	.toc > li li li .secno {
